separate createAnswer() and setLocalDescription() in the answer side so as to get around the timeout problem

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
       <textarea id="my_text" cols="48" rows="9" placeholder="Copy and send this text to your peer"></textarea>
     </li>
     <li id="their_text_div">
-      <textarea id="their_text" cols="48" rows="9" placeholder="Receive text from your peer and paste it here"></textarea>
+      <textarea id="their_text" cols="48" rows="9" placeholder="Receive text from your peer, paste it here, and press ENTER"></textarea>
+    </li>
+    <li id="connect_div">
+      <button id="connect" onclick="connect()">Wait until your peer has received your text, and press this.</button><br>
     </li>
     <li id="file_div">
       <ol>
